src/core-crm/objects/List__c/List__c.object-meta.xml
<CustomObject>
    <description>List supports information capture about a request to compile a list of Contacts for a defined business reason.</description>
    <label>List</label>
    <nameField>
        <displayFormat>LIST-{000000}</displayFormat>
        <label>List Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>