src/core-crm/objects/List__c/fields/Column_10__c.field-meta.xml
<CustomField>
    <fullName>Column_10__c</fullName>
    <description>Used when business users need to define custom columns for a List.</description>
    <inlineHelpText>The column heading for custom column 10.</inlineHelpText>
    <label>Column Header 10</label>
    <length>40</length>
    <type>Text</type>
</CustomField>