src/core-crm/objects/List__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>The date the list was completed.</description>
    <inlineHelpText>The date the list was completed.</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>