src/core-crm/objects/List__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date the finalised list is required.</description>
    <inlineHelpText>The date the finalised list is required.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>