src/core-crm/objects/List__c/fields/Engagement_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to an Engagement Opportunity.</description>
    <inlineHelpText>Engagement Opportunity associated with the List.</inlineHelpText>
    <label>Engagement Opportunity</label>
    <referenceTo>Engagement_Opportunity__c</referenceTo>
    <relationshipLabel>Lists</relationshipLabel>
    <relationshipName>Lists</relationshipName>
    <type>Lookup</type>
</CustomField>