src/core-crm/objects/List__c/fields/List_Name__c.field-meta.xml
<CustomField>
    <fullName>List_Name__c</fullName>
    <description>The name of the list.</description>
    <inlineHelpText>The business defined name for the list.</inlineHelpText>
    <label>List Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>