src/core-crm/objects/List__c/fields/List_Purpose__c.field-meta.xml
<CustomField>
    <fullName>List_Purpose__c</fullName>
    <description>A description of the business process or activity this list is supporting. E.g. “A list of contacts is required to identity potential candidates for the QUT Business Leaders Hall Of Fame Induction Dinner”.</description>
    <inlineHelpText>A description of the business process or activity this list is supporting</inlineHelpText>
    <label>List Purpose</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>