src/core-crm/objects/List__c/fields/QUT_Organisation_Unit__c.field-meta.xml
<CustomField>
    <fullName>QUT_Organisation_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The QUT Organisation Unit the list is being created for.</description>
    <inlineHelpText>The QUT Division or Faculty the list is being created for.</inlineHelpText>
    <label>QUT Organisation Unit</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3 OR 4) AND 5</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>University Department</value>
        </filterItems>
        <filterItems>
            <field>Account.Organization_Unit_Level__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filterItems>
        <filterItems>
            <field>Account.Organization_Unit_Level__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filterItems>
        <filterItems>
            <field>Account.Organization_Unit_Level__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filterItems>
        <filterItems>
            <field>Account.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lists (QUT Organisation Unit)</relationshipLabel>
    <relationshipName>Lists1</relationshipName>
    <type>Lookup</type>
</CustomField>