src/core-crm/objects/List__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The QUT staff member requesting the contact list.</description>
    <inlineHelpText>The QUT staff member requesting the contact list.</inlineHelpText>
    <label>Requestor Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Person</value>
        </filterItems>
        <filterItems>
            <field>Contact.QUT_Employee_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Lists</relationshipLabel>
    <relationshipName>Lists</relationshipName>
    <type>Lookup</type>
</CustomField>