src/core-crm/objects/List__c/recordTypes/Distributed_List.recordType-meta.xml
<RecordType>
    <fullName>Distributed_List</fullName>
    <active>true</active>
    <description>List of contacts identified that meet the list criteria that have been qualified for inclusion</description>
    <label>Distributed List</label>
</RecordType>