src/core-crm/objects/List__c/recordTypes/Engagement_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Engagement_Opportunity</fullName>
    <active>true</active>
    <description>List of contacts have been included in the engagement opportunity</description>
    <label>Engagement Opportunity</label>
</RecordType>