src/core-crm/objects/List__c/validationRules/Distribute_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Distribute_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Stage__c),
ISPICKVAL( PRIORVALUE(Stage__c) ,&quot;Distribute&quot;),
NOT(ISPICKVAL( Stage__c, &apos;Closed&apos;))
)</errorConditionFormula>
    <errorDisplayField>Stage__c</errorDisplayField>
    <errorMessage>You can only mark the List as Closed post distribution.</errorMessage>
</ValidationRule>