src/core-crm/objects/List__c/validationRules/DL_New_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DL_New_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&quot;Distributed_List&quot;,
ISCHANGED(Stage__c),
ISPICKVAL( PRIORVALUE(Stage__c) ,&quot;New&quot;),
AND(NOT(ISPICKVAL( Stage__c, &apos;In Progress&apos;)),
NOT(ISPICKVAL( Stage__c, &apos;Closed&apos;)))
)</errorConditionFormula>
    <errorDisplayField>Stage__c</errorDisplayField>
    <errorMessage>You can only progress to the next stage which is In Progress or mark the List as Closed</errorMessage>
</ValidationRule>