src/core-crm/objects/List__c/listViews/All_lists.listView-meta.xml
<ListView>
    <fullName>All_lists</fullName>
    <columns>NAME</columns>
    <columns>List_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Requestor_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>List__c.Distributed_List</value>
    </filters>
    <label>All lists</label>
    <sharedTo>
        <group>Advancement_Manager</group>
        <group>Advancement_Operations_Manager</group>
        <group>Donor_Engagement_Manager</group>
        <group>Executive_Director_Advancement</group>
        <group>Fundraiser</group>
        <group>Fundraising_Manager</group>
    </sharedTo>
</ListView>