src/core-crm/objects/List__c/listViews/All_Lists_Distribute_Stage.listView-meta.xml
<ListView>
    <fullName>All_Lists_Distribute_Stage</fullName>
    <columns>NAME</columns>
    <columns>List_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Requestor_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Distribute</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>List__c.Distributed_List</value>
    </filters>
    <label>All Lists - Distribute Stage</label>
    <sharedTo>
        <group>Advancement</group>
    </sharedTo>
</ListView>