src/core-crm/objects/List__c/listViews/Distributed_List.listView-meta.xml
<ListView>
    <fullName>Distributed_List</fullName>
    <columns>NAME</columns>
    <columns>List_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Requestor_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>List__c.Distributed_List</value>
    </filters>
    <label>Distributed List</label>
    <sharedTo>
        <group>Alumni_Corporate_Partnerships</group>
    </sharedTo>
</ListView>