src/core-crm/objects/List__c/listViews/My_Active_Lists.listView-meta.xml
<ListView>
    <fullName>My_Active_Lists</fullName>
    <columns>NAME</columns>
    <columns>List_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Requestor_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>List__c.Distributed_List</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>My Active Lists</label>
    <sharedTo>
        <group>Advancement_Manager</group>
        <group>Advancement_Operations_Manager</group>
        <group>Donor_Engagement_Manager</group>
        <group>Fundraiser</group>
        <group>Fundraising_Manager</group>
    </sharedTo>
</ListView>